IoC 改造