@@ -1,2 +1,7 @@
+```sh
+# java.lang.reflect.InaccessibleObjectException: Unable to make protected final java.lang.Class java.lang.ClassLoader.defineClass 报错的情况处理
+java --add-opens java.base/java.lang=ALL-UNNAMED
+```
+
 ### 脚本化 HTTP 请求
 
